--- a/see-n-say-storymaker/see-n-say-storymaker/index.html
+++ b/see-n-say-storymaker/see-n-say-storymaker/index.html
@@ -29,6 +29,18 @@
             <p id="status"></p>
             <p id="story-output"></p>
         </section>
+        <section id="app">
+			<input type="text" id="text-input" placeholder="Type something here..." />
+			<button id="speak-button">Speak Text</button>
+			<div>
+				<button class="random-button">Random Phrase 1</button>
+				<button class="random-button">Random Phrase 2</button>
+				<button class="random-button">Random Phrase 3</button>
+				<button class="random-button">Random Phrase 4</button>
+				<button class="random-button">Random Phrase 5</button>
+			</div>
+			<p id="status"></p>
+		</section>
     </main>
     <footer>
         <p>&copy; 2024 Speech Synthesis by KD</p>
